--- a/questionnaireQuizz/questionnaireQuizz.csproj
+++ b/questionnaireQuizz/questionnaireQuizz.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MySql.Data" Version="9.2.0" />
+    <PackageReference Include="PDFsharp" Version="6.1.1" />
   </ItemGroup>
 
 </Project>
